# todo-api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/todo_api/: auth_models.py  auth_routes.py  auth_schames.py  auth_schemas.py  auth_utils.py  database.py  main.py  models.py  schemas.py
src/todo_api/static/: script.js  style.css
src/todo_api/templates/: index.html
tests/: conftest.py  test_auth.py  test_tasks.py
